--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.2.0 (2017-05-19): Use the new "node" images instead of "yarn"
 v0.2.1 (2017-05-19): Defaults: Watch all sass files, and stay on latest sass libraries
+v0.2.2 (2017-05-19): Defaults: Remove static/css on clean
