--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,3 +9,4 @@ v1.1.0 (2017-08-31): Manage requirements.txt directly; Add flask support
 v1.1.0 (2017-09-06): Simplify ruby dependencies
 v1.2.0 (2017-09-22): Proxy support
 v2.0.0 (2017-09-23): Use a single "dev" image; Update package.json commands
+v2.1.0 (2017-09-23): Support for bundler; Change "debug" to "exec"; Better package.json defaults
