--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,3 +13,5 @@ v2.1.0 (2017-09-29): Support for bundler; Change "debug" to "exec"; Better packa
 v2.1.1 (2017-09-30): Provide COMMIT_ID environment variable in running containers
 v2.2.0 (2017-11-03): Add Bower dependency management
 v2.4.1 (2017-12-14): Add local environment file to share secrets
+v2.5.0 (2017-12-19): Update docker image to 1.4
+v2.6.0 (2018-02-12): Fix module volumes; Allow exporting multiple ports in exec
