--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -21,3 +21,4 @@ v2.6.3 (2018-02-15): Prevent module volumes from creating directories as root
 v2.7.0 (2018-02-15): Improved dependency checking
 v2.7.1 (2018-02-27): Use macOS md5 command on macOS
 v3.0.0 (2018-03-20): Always use "yarn run serve" for serving site
+v3.0.1 (2018-03-21): Support explicitly specifying env vars for any ./run command with --env
