--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,3 +23,4 @@ v2.7.1 (2018-02-27): Use macOS md5 command on macOS
 v3.0.0 (2018-03-20): Always use "yarn run serve" for serving site
 v3.0.1 (2018-03-21): Support explicitly specifying env vars for any ./run command with --env
 v3.1.0 (2018-05-18): Add port forwarding, simplify tests to always run through package.json
+v3.2.0 (2018-06-18): Update dev image to v1.6.0 which uses Ubuntu Bionic as a base image
