--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,3 +28,4 @@ v3.2.1 (2018-06-25): Update dev image to v1.6.1 to be able to mount a .ssh folde
 v3.2.2 (2018-10-22): Update dev image to v1.6.2 to use node v8.10.0
 v3.2.3 (2018-10-22): Update dev image to v1.6.3 which includes black
 v3.3.0 (2019-03-26): Add back database support for Django sites
+v3.3.1 (2019-03-27): Include a database for "./run exec" as well
